[package]
name = "ruff-python-ast"
version = "0.2.0"
description = "AST definitions for Ruff"
authors = ["Charlie Marsh <charlie.r.marsh@gmail.com>"]
edition = "2021"
repository = "https://github.com/astral-sh/ruff"
license = "MIT"

[dependencies]
rustpython-parser-core = { workspace = true }
rustpython-literal = { workspace = true, optional = true }

is-macro = { workspace = true }
num-bigint = { workspace = true }
static_assertions = "1.1.0"
